[package]
name = "in-amber-clad"
version = "0.1.1"
authors = ["Vanderson Antonietti"]
license = "MIT"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", default-features = false }
color-eyre = "0.6.3"
ratzilla = "0.0.4"
tachyonfx = { version = "0.19.0", default_features = false, features = [
  "web-time",
] }
console_error_panic_hook = "0.1.7"
